add autocomplete. Step 1
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8267 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ScriptEditor.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ScriptEditor.mxml
@@ -92,6 +92,7 @@
 					_actionVO.script = script;
 				
 				_actionVO = value;
+				value.script= value.script.replace(/&nbsp;/g, " ");
 				script = value.script;
 				if ( value.saved )
 					unsaved = false;
