jump to page on click page link () in preview
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8272 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -911,11 +911,14 @@
 				if (pageName.indexOf("#") == 0)
 					return;
 				
-				tree.expandItem(tree.selectedItem, true);
+				var pageToSelect : XML = XML(tree.dataProvider.source..page.( @name == pageName )[ 0 ]);
+				
+				if (!pageToSelect)
+					return;
 				
 				tree.selectedItem = null;
 				
-				var pageToSelect : XML = XML(tree.dataProvider.source..page.( @name == pageName )[ 0 ]);
+				tree.expandItem(pageToSelect.parent(), true);
 				
 				selectTreePage(pageToSelect);
 			}
