sort variables by name
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8284 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -1051,7 +1051,7 @@
 				}
 				arr.push( { Name : "this", Value : curGraphContext.curGraph.name, children : subArr } );
 
-				pnl_variables.grid.dataProvider = new HierarchicalData( arr );
+				pnl_variables.grid.dataProvider = new HierarchicalData( arr.sortOn("Name", Array.CASEINSENSITIVE) );
 				pnl_variables.grid.invalidateList();
 
 				// --------------------------
