--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -138,6 +138,8 @@
 			import net.vdombox.powerpack.managers.ProgressManager;
 			import net.vdombox.powerpack.menu.MenuManager;
 			import net.vdombox.powerpack.panel.Console;
+			import net.vdombox.powerpack.panel.graphsClasses.AccordionChild;
+			import net.vdombox.powerpack.panel.graphsClasses.GraphsAccordionEvent;
 			import net.vdombox.powerpack.template.BuilderTemplate;
 			import net.vdombox.powerpack.template.BuilderTemplateProject;
 			import net.vdombox.powerpack.updater.BuilderUpdater;
@@ -1393,6 +1395,96 @@
 				currentTemplate.modified = true;
 		}
 		
+		protected function pnl_graphs_importGraphClickHandler(event:GraphsAccordionEvent):void
+		{
+			var accordChild : AccordionChild = event.target as AccordionChild;
+			
+			var categoryName : String = accordChild.label;
+			
+			var folder : File = BuilderContextManager.instance.lastDir;
+			
+			folder.addEventListener( Event.SELECT, graphFileSelectHandler );
+			
+			folder.browseForOpen( "Import graph", [new FileFilter("Graph xml", "*.xml")] );
+			
+			var graphFile : File;
+			var fileStream : FileStream;
+			
+			function graphFileSelectHandler (event : Event) : void
+			{
+				folder.removeEventListener( Event.SELECT, graphFileSelectHandler );
+				
+				graphFile = event.target as File;
+				
+				openFileStream();
+				
+				ProgressManager.source = fileStream;
+				ProgressManager.start();
+				
+				fileStream.openAsync( graphFile, FileMode.READ );
+			}
+			
+			function openFileStream() : void
+			{
+				fileStream = new FileStream();
+				
+				fileStream.addEventListener( Event.COMPLETE, graphFileOpenCompleteHandler );
+				fileStream.addEventListener( IOErrorEvent.IO_ERROR, graphFileOpenErrorHandler );
+			}
+			
+			function closeFileStream() : void
+			{
+				fileStream.removeEventListener( Event.COMPLETE, graphFileOpenCompleteHandler );
+				fileStream.removeEventListener( IOErrorEvent.IO_ERROR, graphFileOpenErrorHandler );
+				
+				fileStream.close();
+				fileStream = null;
+			}
+			
+			function graphFileOpenCompleteHandler (event : Event) : void
+			{
+				var strData : String = fileStream.readUTFBytes( fileStream.bytesAvailable );
+				
+				closeFileStream();
+				
+				var xmlData : XML = XML( strData );
+				
+				if (!xmlData || !xmlData.name())
+				{
+					ProgressManager.complete();
+					AlertPopup.show("Incorrect graph xml", "Error:");
+					return;
+				}
+					
+				var xmlName : String = xmlData.name() is QName ? QName(xmlData.name()).localName : xmlData.name().toString();
+				 
+				if (xmlName != "graph")
+				{
+					ProgressManager.complete();
+					AlertPopup.show("Incorrect graph xml", "Error:");
+					return;
+				}
+				
+				xmlData.@category = categoryName;
+				
+				importTemplate(xmlData);
+				
+				ProgressManager.complete();
+			}
+			
+			function graphFileOpenErrorHandler (event : IOErrorEvent) : void
+			{
+				closeFileStream();
+				
+				graphFile.cancel();
+				
+				ProgressManager.complete();
+				
+				AlertPopup.show("Error:", event.text);
+			}
+			
+		}
+		
 		]]>
 	</mx:Script>
 	
@@ -1414,7 +1506,8 @@
 
 								  vsViewStack="{viewstack}"
 								  graphEditorControlBar="{graphEditorControlBar}"
-								  templateChanged="{graphsChangeHandler()}">
+								  templateChanged="{graphsChangeHandler()}"
+								  importGraphClick="pnl_graphs_importGraphClickHandler(event)">
 					</panel:Graphs>
 
 					<mx:Panel creationIndex="1" width="100%" height="100%" layout="absolute"
