Jumping to a graph in a command state.[sub...]
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8295 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/controlbar/GraphEditorControlBar.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/controlbar/GraphEditorControlBar.mxml
@@ -132,8 +132,7 @@
 						
 						var selectedNode : Node = graph.selectedNodes[0];
 						
-						if (selectedNode.category == NodeCategory.SUBGRAPH)
-							btnJump.enabled = true;
+						btnJump.enabled = selectedNode.canJumpToGraph;
 					}
 				}
 					
