--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/controlbar/PowerPackControlBar.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/controlbar/PowerPackControlBar.mxml
@@ -116,6 +116,11 @@
 				return isMac ? String.fromCharCode(8984) : "Ctrl";
 			}
 			
+			private function get shiftString () : String
+			{
+				return isMac ? String.fromCharCode(8679) : "Shift";
+			}
+			
 			private function get altString () : String
 			{
 				return isMac ? String.fromCharCode(8997) : "Alt";
@@ -134,6 +139,11 @@
 			private function get ctrlAndAltString () : String
 			{
 				return isMac ? altString + ctrlString : ctrlString + separator + altString;
+			}
+			
+			private function get ctrlAndShiftString () : String
+			{
+				return isMac ? shiftString + ctrlString : ctrlString + separator + shiftString;
 			}
 		]]>
 	</mx:Script>
@@ -160,7 +170,7 @@
 								 sourceEnabled="@Embed('/assets/icons/exportXMLEnabled.png')"
 								 sourceDisabled="@Embed('/assets/icons/exportXMLDisabled.png')"
 								 click="menuItem_clickHandler(event, ITEM_TYPE_EXPORT_TEMPLATE)" 
-								 toolTip="Export template ({ctrlString}{separator}E)"/>
+								 toolTip="Export template ({ctrlAndAltString}{separator}E)"/>
 	
 	<mx:VRule height="20"/>
 	
