--- a/Help/Editor/v.01/src/net/vdombox/helpeditor/view/components/TemplatesGroup.mxml
+++ b/Help/Editor/v.01/src/net/vdombox/helpeditor/view/components/TemplatesGroup.mxml
@@ -59,7 +59,7 @@
 				return currentAccordion.selectedChild as TemplatesAccordionChild;
 			}
 			
-			private function get allTemplates () : Array
+			public function get allTemplates () : Array
 			{
 				var allTemplatesArray : Array = [];
 				
