git-svn-id: http://svn.vdombox.ru/flextools/trunk@8317 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/net/vdombox/helpeditor/view/components/SyncPagesSelector.mxml
+++ b/Help/Editor/v.01/src/net/vdombox/helpeditor/view/components/SyncPagesSelector.mxml
@@ -17,6 +17,8 @@
 			
 			private var products : Object = sqlProxy.getAllProducts();
 			
+			private var lastSelectedPageName : String;
+			
 			public function get pages () : XMLList
 			{
 				var xmlList : XMLList = new XMLList();
@@ -38,6 +40,27 @@
 			{
 				pagesTree.dataProvider = null;
 				pagesTree.dataProvider = pages;
+				
+			}
+			
+			private function get lastSelectedPage () : XML
+			{
+				for each (var product : XML in pagesTree.dataProvider)
+				{
+					var pageName : String = product.@name;
+					
+					if (pageName == lastSelectedPageName)
+						return product;
+					
+					for each (var page : XML in product..page)
+					{
+						pageName = page.@name;
+						if (pageName == lastSelectedPageName)
+							return page;
+					}
+				}
+				
+				return null;
 			}
 			
 			private function treeItemRenderer_getCurrentSyncGroupNameHandler (event : PagesSyncronizationEvent) : void
@@ -52,6 +75,15 @@
 				pagesTree.addEventListener(PagesSyncronizationEvent.GET_CUR_SYNC_GROUP_NAME, treeItemRenderer_getCurrentSyncGroupNameHandler, true);
 			}
 			
+			protected function pagesTree_changeHandler(event:ListEvent):void
+			{
+				if (!pagesTree.selectedItem)
+					return;
+				
+				var selectedPage : XML = pagesTree.selectedItem as XML;
+				lastSelectedPageName = selectedPage.@name;
+			}
+			
 		]]>
 	</mx:Script>
 	
@@ -62,6 +94,7 @@
 			 defaultLeafIcon="{null}"
 			 folderClosedIcon="{null}"
 			 folderOpenIcon="{null}"
-			 initialize="pagesTree_initializeHandler(event)"/>
+			 initialize="pagesTree_initializeHandler(event)"
+			 change="pagesTree_changeHandler(event)"/>
 	
 </mx:VBox>
