Load type to server added
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8321 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectView.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectView.mxml
@@ -16,6 +16,7 @@
 			
 			private var _tabNavigator:TabNavigator;
 			private var _saveButton:Button;
+			
 			[Bindable]
 			public 	var	 isEnabled:Boolean = false;
 			
@@ -48,9 +49,10 @@
 	<s:HGroup right="453" width="100%" gap="19" verticalAlign="top" paddingBottom="10" paddingRight="10">
 		<s:Group width="100%"/>
 		
-		<s:Button label="Save"		id="saveObjectTypeButton"	enabled="{isEnabled}"/>
-		<s:Button label="Save as"	id="saveAsObjectTypeButton"	enabled="{isEnabled}"/>
-		<s:Button label="load"		id="loadObjectTypeToServerButton"	enabled="{isEnabled}"/>
-		<s:Button label="Reload"	id="restartButton"			enabled="{isEnabled}"/>
+		<s:Button label="Save"		id="saveObjectTypeButton"				enabled="{isEnabled}"/>
+		<s:Button label="Save as"	id="saveAsObjectTypeButton"				enabled="{isEnabled}"/>
+		<s:Button label="connect"	id="connectObjectTypeToServerButton"	/>
+		<s:Button label="load"		id="loadObjectTypeToServerButton"		enabled="false"/>
+		<s:Button label="Reload"	id="restartButton"						enabled="{isEnabled}"/>
 	</s:HGroup>	
 </mx:VBox>
