--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectsAccordion.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectsAccordion.mxml
@@ -12,6 +12,7 @@
 	
 	<fx:Script>
 		<![CDATA[		
+			import spark.events.TextOperationEvent;
 						
 			public function  addObject(object:DisplayObject):void
 			{
@@ -28,6 +29,37 @@
 			{
 				accordion.removeAllChildren();				
 			}
+			
+			protected function typeFilter_changeHandler(event:TextOperationEvent):void
+			{
+				find();
+			}
+			
+			private function find() : void
+			{
+				if ( typeFilter.text.length > 0 && typeFilter.text != resourceManager.getString( 'Wysiwyg_General', 'toolbox_panel_filter') )
+				{
+					accordion.removeAllChildren();
+					
+					
+					/*for each ( var typeVO : TypeVO in _types )
+					{
+						if ( typeVO.displayName.toLowerCase().indexOf( typeFilter.text ) >= 0 )
+							typesCategory.addType( typeVO );
+					}*/
+					
+					cross.visible = true;
+				}
+				else
+				{
+					accordion.removeAllChildren();
+					/*categories = [];
+					showTypes();*/
+					
+					cross.visible = false;
+				}
+			}
+			
 		]]>
 	</fx:Script>
 	
@@ -37,6 +69,15 @@
 		<s:layout>
 			<s:VerticalLayout paddingLeft="2" paddingRight="2" paddingTop="2" paddingBottom="2"/>
 		</s:layout>
+		
+		<s:Group>
+			<s:TextInput id="typeFilter" width="100%" 
+						 text="Find type" fontStyle="italic"
+						 change="typeFilter_changeHandler(event)" />
+			
+			<mx:Image id="cross" height="100%" verticalAlign="middle" right="4" visible="false" 
+					  />
+		</s:Group>
 		
 		<mx:Accordion id="accordion" color="0x323232" width="100%" height="100%" doubleClickEnabled="true"/>						
 	</s:Panel>	
