git-svn-id: http://svn.vdombox.ru/flextools/trunk@8322 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Variables.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Variables.mxml
@@ -36,8 +36,18 @@
 			
 			protected function grid_changeHandler(event:ListEvent):void
 			{
-				// TODO Auto-generated method stub
-				txt.text = event.itemRenderer.data["FullValue"]	
+				var selValue : * = event.itemRenderer.data["FullValue"];
+				
+				if (!selValue)
+				{
+					txt.text = "";
+					return;
+				}
+				
+				if (selValue is XML)
+					txt.text = selValue.toXMLString();
+				else
+					txt.text = selValue.toString();
 			}
 			
 		]]>
